--- a/src/components/molecules/business-card/business-card.css
+++ b/src/components/molecules/business-card/business-card.css
@@ -9,6 +9,7 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
+  position: relative;
 
   /* layout */
   padding: var(--content-spacing-medium);
@@ -31,8 +32,27 @@
 }
 
 .business-card-container .business-card-left {
-  /* layout */
-  margin: 40px;
+  /* positioning */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  /* dimensions */
+  width: 220px;
+  height: 100%;
+}
+
+.business-card-container .business-card-right {
+  /* positioning */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+
+  /* dimensions */
+  width: 260px;
+  height: 100%;
 }
 
 .business-card-container .avatar-container {
@@ -74,5 +94,21 @@
     max-height: 500px;
     width: auto;
     max-width: auto;
+  }
+
+  .business-card-container .business-card-left {
+    /* dimensions */
+    height: 220px;
+    width: 100%;
+  }
+
+  .business-card-container .business-card-right {
+    /* positioning */
+    justify-content: flex-start;
+    align-items: center;
+
+    /* dimensions */
+    width: 100%;
+    height: 260px;
   }
 }
