--- a/src/components/atoms/image/image.css
+++ b/src/components/atoms/image/image.css
@@ -6,9 +6,21 @@
 }
 
 .image-container {
+  position: relative;
   font-size: 0;
 }
 
 .image-container img {
+  bottom: 0;
+  height: 100%;
+  left: 0;
+  margin: 0;
+  max-width: none;
+  padding: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 100%;
+  object-fit: cover;
   transition: var(--default-transition);
 }
