--- a/src/components/atoms/image/image.css
+++ b/src/components/atoms/image/image.css
@@ -7,7 +7,10 @@
 
 .image-container {
   position: relative;
+  overflow: hidden;
   font-size: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .image-container img {
