--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
 
   /* dimensions */
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 }
 
 body {
@@ -36,4 +36,7 @@ body {
   /* dimensions */
   width: 100%;
   height: 100%;
+  
+  /* layout */
+  padding: 40px;
 }
