--- a/src/components/atoms/button/button.css
+++ b/src/components/atoms/button/button.css
@@ -1,5 +1,5 @@
 @import url("../../../styles/colors.css");
-@import url("../../../styles/fonts");
+@import url("../../../styles/fonts.css");
 @import url("../../../styles/layout.css");
 @import url("../../../styles/transitions.css");
 
