--- a/src/components/atoms/link/link.css
+++ b/src/components/atoms/link/link.css
@@ -11,7 +11,7 @@
   display: inline-flex;
   flex-direction: row;
   font-family: var(--default-font-family);
-  font-size: var(--font-size-medium);
+  font-size: 14px;
   text-decoration: none;
 }
 
@@ -20,12 +20,12 @@
 }
 
 .link-icon {
-  width: var(--font-size-small);
+  width: 14px;
 }
 
 .link-icon svg {
-  width: 100%;
-  height: 100%;
+  width: inherit;
+  height: inherit;
 }
 
 .link-text {
