--- a/src/components/atoms/link/link.css
+++ b/src/components/atoms/link/link.css
@@ -12,6 +12,7 @@
   flex-direction: row;
   font-family: var(--default-font-family);
   font-size: 14px;
+  line-height: 14px;
   text-decoration: none;
 }
 
