--- a/src/components/molecules/business-card/business-card.css
+++ b/src/components/molecules/business-card/business-card.css
@@ -105,7 +105,7 @@
   color: var(--utils-gray-dark);
 
   /* layout */
-  margin-bottom: var(--content-spacing-small);
+  margin-bottom: var(--content-spacing-medium);
 }
 
 .business-card-container .business-card-links a:hover {
