--- a/src/components/molecules/business-card/business-card.css
+++ b/src/components/molecules/business-card/business-card.css
@@ -100,12 +100,15 @@
 .business-card-container .business-card-links a {
   /* positioning */
   display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: first baseline;
 
   /* colors */
   color: var(--utils-gray-dark);
 
   /* layout */
-  margin-bottom: var(--content-spacing-medium);
+  margin-bottom: var(--content-spacing-small);
 }
 
 .business-card-container .business-card-links a:hover {
