--- a/src/components/atoms/link/link.css
+++ b/src/components/atoms/link/link.css
@@ -14,6 +14,8 @@
   font-size: 14px;
   line-height: 14px;
   text-decoration: none;
+  line-height: 24px;
+  align-items: center;
 }
 
 .link :not(:last-child) {
@@ -23,6 +25,9 @@
 .link-icon {
   width: 14px;
   height: 14px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .link-icon svg {
