--- a/src/components/molecules/business-card/business-card.css
+++ b/src/components/molecules/business-card/business-card.css
@@ -41,10 +41,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
+  flex-shrink: 0;
 
   /* dimensions */
-  width: 220px;
+  width: 180px;
   height: 100%;
 }
 
@@ -53,10 +54,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
+  flex-shrink: 0;
 
   /* dimensions */
-  width: 260px;
+  width: 300px;
   height: 100%;
 }
 
@@ -92,21 +94,23 @@
 }
 
 .business-card-container .business-card-links {
+  /* positioning */
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: center;
+
+  /* dimensions */
   width: 100%;
 }
 
 .business-card-container .business-card-links a {
-  /* colors */
-  color: var(--utils-gray-dark);
-
   /* layout */
-  margin-bottom: var(--content-spacing-small);
+  padding: var(--content-spacing-medium);
 }
 
-.business-card-container .business-card-links a:hover {
-  color: var(--utiils-gray-light);
+.business-card-container .business-card-links a:not(:last-child) {
+  /* layout */
+  margin-right: var(--content-spacing-small);
 }
 
 @media (orientation: portrait) {
@@ -123,22 +127,24 @@
   }
 
   .business-card-container .business-card-left {
+    /* positioning */
+    justify-content: flex-end;
+    align-items: center;
+
     /* dimensions */
-    height: 220px;
+    height: 180px;
     width: 100%;
   }
 
   .business-card-container .business-card-right {
     /* positioning */
     justify-content: flex-start;
-    align-items: center;
 
     /* dimensions */
     width: 100%;
-    height: 260px;
-  }
+    height: 300px;
 
-  .business-card-container .business-card-links {
-    align-items: center;
+    /* layout */
+    padding-top: 40px;
   }
 }
