--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,8 @@ body {
   align-items: center;
 
   /* colors */
-  background-color: darkslategray;
-  color: white;
+  background-color: #dee4e7;
+  color: darkslategray;
 }
 
 #card {
