--- a/src/components/molecules/avatar/avatar.css
+++ b/src/components/molecules/avatar/avatar.css
@@ -12,6 +12,7 @@
   background-color: var(--neutrals-gray-230);
   box-shadow: var(--content-shadow);
   overflow: hidden;
+  isolation: isolate;
 }
 
 .avatar-container svg {
