--- a/src/components/molecules/avatar/avatar.css
+++ b/src/components/molecules/avatar/avatar.css
@@ -1,6 +1,11 @@
 @import url("../../../styles/colors.css");
 @import url("../../../styles/layout.css");
 
+.avatar-container,
+.avatar-container * {
+  box-sizing: border-box;
+}
+
 .avatar-container {
   display: flex;
   flex-direction: column;
