--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -1,7 +1,7 @@
 body {
   /* primary neutrals */
-  --neutrals-white: rgb(255 255 255); /* #ffffff */
-  --neutrals-black: rgb(0 0 0); /* #000000 */
+  --neutrals-white: rgb(255 255 255); /* white, #ffffff */
+  --neutrals-black: rgb(0 0 0); /* black, #000000 */
 
   /* neutral gray */
   --neutrals-gray-102: rgb(102 102 102); /* #666666 */
@@ -20,11 +20,17 @@ body {
   /* highlights */
   --utils-highlight-olive: rgb(107 142 35); /* olivedrab, #6b8e23 */
   --utils-highlight-red: rgb(139 0 0); /* darkred, #8b0000 */
+  --utils-highlight-red-light: rgb(197 98 98); /* #c56262 */
+  --utils-highlight-orange: rgb(255 165 0); /* orange, #ffa500 */
+  --utils-highlight-orange-dark: rgb(255 140 0); /* darkorange, #ff8c00 */
+  --utils-highlight-orange-light: rgb(255 213 128); /* #ffd580 */
 
   /* misc colors */
   --fancy-gold: rgb(218 165 32); /* #daa520 */
 
   /* shadows */
-  --content-shadow: 0 3px 4px 0 rgb(0 0 0 / 14%),
-    0 3px 3px -2px rgb(0 0 0 / 20%), 0 1px 8px 0 rgb(0 0 0 / 12%);
+  --content-shadow:
+    0 3px 4px 0 rgb(0 0 0 / 14%),
+    0 3px 3px -2px rgb(0 0 0 / 20%),
+    0 1px 8px 0 rgb(0 0 0 / 12%);
 }
